# Kingdom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
content/data/: tileset.data  tileset.terrain
content/shaders/: texturedFS.glsl  texturedVS.glsl
dep/glad/include/glad/: glad.h
src/: main.cpp
src/content/: file_handler.cpp  file_handler.h  tinyxml2.cpp  tinyxml2.h
src/core/: event.cpp  event.h  game_window.cpp  game_window.h  glad.cpp
src/game/: building_data.h  terrain.cpp  terrain.h  world_data.cpp  world_data.h  world_gen_data.cpp  world_gen_data.h  world_generator.cpp  world_generator.h
src/graphics/: glad.cpp  shader_program.cpp  shader_program.h  sprite_batch.cpp  sprite_batch.h  texture_2d.cpp  texture_2d.h  tile_map.cpp  tile_map.h  tile_sheet.cpp  tile_sheet.h  vertex_buffer.cpp  vertex_buffer.h
src/gui/: imconfig.h  imgui_impl_sdl.cpp
src/math/: func.cpp  func.h  perlin.cpp  perlin.h  rng.cpp  rng.h
